Add Unit tests